--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,113 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content {
+  --ion-background-color: black;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
+  gap: 10px 10px;
+  grid-template-areas:
+    "content-container"
+    "distance-container"
+    "cost-container"
+    "coordinates-container"
+    "payment-container";
+  justify-items: stretch;
+  align-items: stretch;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.content-container {
+  grid-area: content-container;
 }
 
-#container a {
-  text-decoration: none;
+.distance-container {
+  grid-area: distance-container;
+}
+
+.cost-container {
+  grid-area: cost-container;
+}
+
+.coordinates-container {
+  grid-area: coordinates-container;
+}
+.payment-container {
+  grid-area: payment-container;
+}
+
+.title-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+  padding: 0 5%;
+  width: 90%;
+}
+
+.cost-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.cost-text {
+  color: red;
+  border: 3px solid red;
+  border-radius: 10px;
+  padding: 30px;
+  font-size: 90px;
+  font-family: "SUBWT", "Roboto"; /* Asegúrate de que la fuente "Digital" esté disponible en tu proyecto */
+}
+
+.cost-label {
+  margin: 20px;
+  color: greenyellow;
+}
+
+.cost-label[ngStyle^="{ color: 'green' }"] {
+  color: green;
+}
+
+@font-face {
+  font-family: "SUBWT";
+  src: url("../../assets/fonts/SUBWT.ttf");
+}
+
+.payment-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.message-text {
+  color: white;
+  font-weight: 10px;
+  margin: 20px;
+}
+
+.content-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.distance-container {
+  color: white;
+  margin: 20px;
+}
+
+.coordinates-container {
+  color: white;
+  margin: 20px;
 }
